--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "func-names": "off",
         "no-param-reassign":0,
         "no-use-before-define": 0,
+        "no-unused-vars": "off",
         "import/extensions": [
           "error",
           "ignorePackages",
