--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         "no-param-reassign":0,
         "no-use-before-define": 0,
         "no-unused-vars": "off",
+        "react/prop-types": "off",
         "import/extensions": [
           "error",
           "ignorePackages",
