--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.4.0",
     "sass": "^1.43.4",
+    "sweetalert2": "^11.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
