--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
         "no-use-before-define": 0,
         "no-unused-vars": "off",
         "react/prop-types": "off",
+        "react/no-array-index-key": 0,
         "import/extensions": [
           "error",
           "ignorePackages",
